// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Kusama wallet 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "height": 50,
          "marginBottom": 10,
          "marginTop": 10,
          "paddingLeft": "5%",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/img/kusama.png",
            }
          }
          style={
            Object {
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 0.8,
              "height": 50,
              "overflow": "hidden",
              "width": 50,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
              "marginLeft": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 25,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Bold",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                20000000000000
                 
                KSM
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Bold",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "right",
                    },
                  ]
                }
              >
                $
                NaN
              </Text>
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 18,
              }
            }
          >
            Wallet Kusama
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test Polkadot wallet 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "height": 50,
          "marginBottom": 10,
          "marginTop": 10,
          "paddingLeft": "5%",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/img/dot.png",
            }
          }
          style={
            Object {
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 0.8,
              "height": 50,
              "overflow": "hidden",
              "width": 50,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
              "marginLeft": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 25,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Bold",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                1000000000000
                 
                DOT
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Bold",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "right",
                    },
                  ]
                }
              >
                $
                NaN
              </Text>
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 18,
              }
            }
          >
            Wallet Polkadot
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
